# Rust-Video_chat_app

./: README.md
backend/: Cargo.toml
backend/src/: connect.rs  handle_msg.rs  lobby.rs  main.rs  messages.rs  server.rs  socket.rs
backend/src/api/: lobby.rs
backend/src/schema/: db.rs  message_schema.rs  mod.rs  websocket.rs
backend/src/utils/: mod.rs  msg_builder.rs
video-chat-app-client/: package-lock.json  package.json
video-chat-app-client/public/: index.html
video-chat-app-client/src/: App.js  App.jsx  index.js
video-chat-app-client/src/components/: index.js
video-chat-app-client/src/components/LobbyScreen/: LobbyScreen.css  LobbyScreen.jsx
video-chat-app-client/src/components/RoomScreen/: RoomScreen.css  RoomScreen.jsx
video-chat-app-client/src/context/: PeerProvidor.jsx  SocketProvider.jsx  WScontext.jsx
video-chat-app-client/src/screens/: Lobby.jsx  Room.jsx  index.js
