[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="3.2.0" 
actix-web-actors="3"
actix = "0.10.0"
uuid = { version = "0.8", features = ["v4", "serde"] }
serde_json = "1.0.105"
serde = { version = "1.0.188", features = ["derive"] }
log = "0.4.22"
env_logger = "0.10"